added testing and routing for app

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "body-parser": "^1.12.3",
     "express": "^4.12.3",
-    "mongoose": "^4.0.2"
+    "mongoose": "^4.0.2",
+    "mongoose-validator": "^1.0.3"
   },
   "devDependencies": {
     "chai": "^2.3.0",
