Added authentication to app

--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   },
   "homepage": "https://github.com/jonullberg/single_resource_rest_api#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.3",
+    "eat": "^0.1.1",
     "express": "^4.12.3",
     "mongoose": "^4.0.2",
-    "mongoose-validator": "^1.0.3"
+    "mongoose-validator": "^1.0.3",
+    "passport": "^0.2.1",
+    "passport-http": "^0.2.2"
   },
   "devDependencies": {
     "chai": "^2.3.0",
