removed bundle and added functionality to angular app

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose-validator": "^1.0.3"
   },
   "devDependencies": {
+    "angular": "^1.4.0",
     "chai": "^2.3.0",
     "chai-http": "^1.0.0",
     "grunt": "^0.4.5",
