--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "body-parser": "^1.12.3",
     "express": "^4.12.3",
-    "mongoose": "^4.0.2",
-    "mongoose-validator": "^1.0.3"
+    "mongoose": "^4.0.2"
   },
   "devDependencies": {
     "angular": "^1.4.0",
@@ -28,7 +27,6 @@
     "chai": "^2.3.0",
     "chai-http": "^1.0.0",
     "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jshint": "^0.11.2",
@@ -36,6 +34,8 @@
     "grunt-webpack": "^1.0.8",
     "jasmine-core": "^2.3.4",
     "karma": "^0.12.35",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.2.0",
     "mocha": "^2.2.4",
