--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
+
 {
   "name": "single_rest_api",
   "version": "0.1.0",
   "description": "a single resource REST api using mongoDB that saves quotes",
   "main": "server.js",
   "scripts": {
-    "test": "\"./node_modules/mocha/bin/mocha **/*test.js\""
+    "test": "\"./node_modules/mocha/bin/mocha ./test/**/*test.js\""
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,7 @@
   },
   "homepage": "https://github.com/jonullberg/single_resource_rest_api#readme",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt-nodejs": "latest",
     "body-parser": "^1.12.3",
     "eat": "^0.1.1",
     "express": "^4.12.3",
@@ -33,7 +34,7 @@
     "angular-route": "^1.4.0",
     "chai": "^2.3.0",
     "chai-http": "^1.0.0",
-    "grunt": "^0.4.5",
+    "grunt": "latest",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jshint": "^0.11.2",
