--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "single_rest_api",
   "version": "0.1.0",
@@ -27,28 +26,18 @@
     "passport-http": "^0.2.2"
   },
   "devDependencies": {
-    "angular": "^1.4.0",
-    "angular-base64": "^2.0.5",
-    "angular-cookies": "^1.4.0",
-    "angular-mocks": "^1.4.0",
-    "angular-route": "^1.4.0",
     "chai": "^2.3.0",
     "chai-http": "^1.0.0",
     "grunt": "latest",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jshint": "^0.11.2",
-    "grunt-karma": "^0.11.0",
     "grunt-webpack": "^1.0.8",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.12.35",
-    "karma-chrome-launcher": "^0.1.12",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.2.0",
+    "jsx-loader": "^0.13.2",
     "mocha": "^2.2.4",
     "node-libs-browser": "^0.5.2",
     "phantomjs": "^1.9.17",
+    "react": "^0.13.3",
     "superagent": "^1.2.0",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
