--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-webpack": "^1.0.8",
     "jsx-loader": "^0.13.2",
+    "lodash": "^3.9.3",
     "mocha": "^2.2.4",
     "node-libs-browser": "^0.5.2",
     "phantomjs": "^1.9.17",
